# collectivecrossing

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml  test_wall_collision.py  tool-config.toml
.github/workflows/: docs.yml  test.yml
baseline_policies/: greedy_policy.py
baselines/: index.html
development/: index.html
docs/: baselines.md  development.md  features.md  index.md  installation.md  setup_github_pages.md  trajectory_testing.md  usage.md
examples/: evaluation_script.py  training_script.py  waiting_policy_demo.py
features/: index.html
installation/: index.html
rllib_multiagent_compatibility/: index.html
scripts/: docs.sh  run_greedy_policy_demo.py  run_waiting_policy_demo.py
search/: search_index.json
setup_github_pages/: index.html
setup_local_deployment/: index.html
src/: __init__.py
src/baseline_policies/: __init__.py  waiting_policy.py
src/collectivecrossing/: __init__.py  actions.py  agent_utils.py  collectivecrossing.py  configs.py  observations.py  rendering.py  rewards.py  terminateds.py  truncateds.py  types.py
src/collectivecrossing/envs/: collectivecrossing.py
src/collectivecrossing/tests/: test_collective_crossing.py
src/collectivecrossing/utils/: geometry.py  pydantic.py
tests/collectivecrossing/envs/: test_action_agent_validity.py  test_collective_crossing.py  test_dummy.py  test_greedy_policy.py  test_rewards.py  test_terminateds.py  test_trajectory_vcr.py  test_truncateds.py
tests/fixtures/trajectories/golden/: consistency_test.json  golden_basic_trajectory.json  regression_test.json  test_basic_trajectory.json  test_list_golden.json
trajectory_testing/: index.html
usage/: index.html
