[project]
name = "collectivecrossing"
version = "0.1.0"
description = "A new project"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pydantic>=2.11.7",
]
requires-python = ">=3.10,<3.14"
readme = "README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/collectivecrossing"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.1.6",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy==1.17.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
]

demo = [
    "ray[rllib]==2.49.2",
    "torch>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/collectivecrossing",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=70",
]

[tool.coverage.run]
source = ["src/collectivecrossing"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = false
strict_equality = false
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "gymnasium.*",
    "ray.*",
    "matplotlib.*",
    "numpy.*",
    "pydantic.*",
]
ignore_missing_imports = true
